//
// Copyright (c) 2024, Daily
//
// SPDX-License-Identifier: BSD 2-Clause License
//

// Generate frames_pb2.py with:
//
//   python -m grpc_tools.protoc --proto_path=./ --python_out=./protobufs frames.proto

syntax = "proto3";

package audio;

message AudioFrame {
  bytes audio_data = 1;
  int32 sample_rate = 2;
  int32 num_channels = 3;
  string frame_id = 4;
  int64 timestamp = 5;
}

message TranscriptFrame {
  string text = 1;
  bool is_final = 2;
  float confidence = 3;
}

message TTSFrame {
  bytes audio_data = 1;
  int32 sample_rate = 2;
}
